--- a/help/using/docs-updates/docs-2015.md
+++ b/help/using/docs-updates/docs-2015.md
@@ -1,23 +1,22 @@
 ---
-description: Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2015. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
-seo-description: Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2015. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+description: Liste de la documentation sur les Audiences Manager nouvelle et révisée publiée en 2015. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+seo-description: Liste de la documentation sur les Audiences Manager nouvelle et révisée publiée en 2015. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
 seo-title: Mises à jour de la documentation 2015
 solution: Audience Manager
 title: Mises à jour de la documentation 2015
 uuid: d4f74632-fc95-4684-b805-f021c42a4167
-feature: Overview
-translation-type: tm+mt
-source-git-commit: e05eff3cc04e4a82399752c862e2b2370286f96f
+feature: Présentation
+exl-id: a7b7e1b5-8e46-42d2-a57d-35fe1096d841
+source-git-commit: 4d3c859cc4dc5294286680b0e63c287e0409f7fd
 workflow-type: tm+mt
-source-wordcount: '1327'
+source-wordcount: '1328'
 ht-degree: 11%
 
 ---
 
-
 # Mises à jour de la documentation 2015 {#documentation-updates}
 
-Liste de documentation sur les Audiences Manager nouvelles et révisées publiée en 2015. Comprend des mises à jour ou des modifications mineures du guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
+Liste de la documentation sur les Audiences Manager nouvelle et révisée publiée en 2015. Inclut des mises à jour mineures ou des modifications au guide d’Audience Manager qui peuvent ne pas être incluses dans les notes de mise à jour de l’Experience Cloud.
 
 ## Novembre 2015 {#nov-15}
 
@@ -38,16 +37,16 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
    <td colname="col2"> <p>Révision afin d’inclure de nouvelles exigences en matière de mot de passe. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md#cost-attribution"> Attribution de la facturation et de l’impression pour les flux de données CPM  </a> </p> </td> 
-   <td colname="col2"> <p>Instructions sur la manière d’allouer des impressions pour différents flux de données CPM. </p> </td> 
+   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md#cost-attribution"> Affectation de facturation et d’impressions pour les flux de données CPM  </a> </p> </td> 
+   <td colname="col2"> <p>Instructions sur l’affectation d’impressions pour différents flux de données CPM. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md"> Attribution de la facturation et de l’impression pour les flux de données à frais fixes  </a> </p> </td> 
-   <td colname="col2"> <p>Instructions sur la manière d’attribuer des impressions pour différents flux de données à frais fixes. </p> </td> 
+   <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md"> Affectation de facturation et d’impressions pour les flux de données de flux plats  </a> </p> </td> 
+   <td colname="col2"> <p>Instructions sur l’affectation d’impressions pour différents flux de données à frais plats. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/administration/usage-limits.md"> Limites d’utilisation </a> </p> </td> 
-   <td colname="col2"> <p> <span class="keyword"> Audience </span> Manager définit une limite maximale pour le nombre de caractéristiques, de segments, de destinations et de modèles algorithmiques que vous pouvez créer pour un compte. </p> </td> 
+   <td colname="col2"> <p> <span class="keyword"> Audience </span> Manager définit une limite maximale sur le nombre de caractéristiques, de segments, de destinations et de modèles algorithmiques que vous pouvez créer pour un compte. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-providers/marketplace-create-manage-feeds.md#discounts"> Remises pour les fournisseurs de données  </a> </p> </td> 
@@ -55,7 +54,7 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-manage-subscriptions.md#buyer-discount"> Remises pour les acheteurs de données  </a> </p> </td> 
-   <td colname="col2"> <p>Les acheteurs peuvent demander ou s’abonner à des flux de données à tarif réduit. </p> </td> 
+   <td colname="col2"> <p>Les acheteurs peuvent demander ou s’abonner à des flux de données réduits. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -72,10 +71,10 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/cid.md"> CID remplace DPID et DPUUID </a> </p> </td> 
-   <td colname="col2"> <p>Mettez à jour votre code pour utiliser <code> d_cid</code> ou <code> d_cid_ic</code> au lieu de <code> d_dpid</code> et <code> d_dpuuid</code>. Les variables DPID et DPUUID continueront à fonctionner, mais vous devez les considérer comme obsolètes. Cela inclut les variantes DPID et DPUUID sans préfixe <code> d_</code>. </p> </td> 
+   <td colname="col2"> <p>Mettez à jour votre code pour utiliser <code> d_cid</code> ou <code> d_cid_ic</code> au lieu de <code> d_dpid</code> et <code> d_dpuuid</code>. Les variables DPID et DPUUID continueront de fonctionner, mais vous devez les considérer comme obsolètes. Cela inclut les variantes DPID et DPUUID sans le préfixe <code> d_</code>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/declared-ids.md#variables-and-syntax"> Variables d’URL et syntaxe pour les ID déclarés  </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../features/declared-ids.md#variables-and-syntax"> Variables et syntaxe d’URL pour les identifiants déclarés  </a> </p> </td> 
    <td colname="col2" morerows="1"> <p>Révision du texte afin d’inclure les paires <code> d_cid</code> et <code> d_cid_ic</code> clé-valeur. </p> </td> 
   </tr> 
   <tr> 
@@ -83,7 +82,7 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-private-feeds.md"> Flux de données privés </a> </p> </td> 
-   <td colname="col2"> <p>Un flux de données privé est une option qui permet aux fournisseurs de limiter l’accès des acheteurs à leurs données. Les fournisseurs de données et les acheteurs doivent consulter cette section pour en savoir plus sur la création et l’abonnement de flux de données privés. </p> </td> 
+   <td colname="col2"> <p>Un flux de données privé est une option qui permet aux fournisseurs de limiter l’accès des acheteurs à leurs données. Les fournisseurs de données et les acheteurs doivent consulter cette section pour plus d’informations sur la création et l’abonnement aux flux de données privés. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données </a> </p> </td> 
@@ -92,7 +91,7 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </tbody> 
 </table>
 
-## septembre 2015 {#sept-15}
+## Septembre 2015 {#sept-15}
 
 <table id="table_A3CAA532BFE7440C93BC11DEF5594D65"> 
  <thead> 
@@ -104,19 +103,19 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/metadata-files-intro/metadata-files-intro.md"> Fichiers de données et de métadonnées pour les rapports d’Audience Optimization</a> </p> </td> 
-   <td colname="col2"> <p>Format et contenu requis pour intégrer des données dans les rapports <span class="wintitle"> Audience Optimization</span>. </p> </td> 
+   <td colname="col2"> <p>Exigences de format et de contenu pour l’importation des données dans les rapports <span class="wintitle"> Audience Optimization</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/media-data-integration/impression-data-pixels.md"> Capture des données d’impression de campagne via des appels de pixel </a> </p> </td> 
-   <td colname="col2"> <p>Révisions et mises à jour de texte. Inclut également de nouvelles paires clé-valeur requises pour utiliser et afficher des noms de données lisibles dans les rapports <span class="wintitle"> Advertising Analytics</span>. </p> </td> 
+   <td colname="col2"> <p>Révisions et mises à jour de texte. De nouvelles paires clé-valeur ont également été incluses pour permettre l’utilisation et l’affichage de noms de données lisibles dans les rapports <span class="wintitle"> Advertising Analytics</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/media-data-integration/click-data-pixels.md"> Capture des données de clics de campagne via des appels de pixel </a> </p> </td> 
-   <td colname="col2"> <p>Révisions et mises à jour de texte. Inclut également de nouvelles paires clé-valeur requises pour utiliser et afficher des noms de données lisibles dans les rapports <span class="wintitle"> Advertising Analytics</span>. </p> </td> 
+   <td colname="col2"> <p>Révisions et mises à jour de texte. De nouvelles paires clé-valeur ont également été incluses pour permettre l’utilisation et l’affichage de noms de données lisibles dans les rapports <span class="wintitle"> Advertising Analytics</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/audience-optimization-reports/audience-optimization-reports.md"> Rapports d’Audience Optimization</a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour de l’introduction avec les informations sur les besoins. </p> </td> 
+   <td colname="col2"> <p>Mise à jour de l’introduction avec des informations sur les exigences. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -133,10 +132,10 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/bulk-management-tools/bulk-management-intro.md"> Outils de gestion en bloc </a> </p> </td> 
-   <td colname="col2"> <p>Les outils de gestion en bloc vous permettent de créer et de gérer plusieurs objets à la fois avec une seule opération. Vous pouvez utiliser les outils de gestion en bloc pour utiliser des sources de données, des signaux dérivés, des destinations, des dossiers, des segments et des caractéristiques. </p> </td> 
+   <td colname="col2"> <p>Les outils de gestion en bloc vous permettent de créer et de gérer plusieurs objets à la fois avec une seule opération. Vous pouvez utiliser les outils de gestion en bloc pour travailler avec des sources de données, des signaux dérivés, des destinations, des dossiers, des segments et des caractéristiques. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <a href="../integration/integration-other-solutions/audience-management-module.md"> Mise en oeuvre du module Gestion des Audiences</a> </td> 
+   <td colname="col1"> <a href="../integration/integration-other-solutions/audience-management-module.md"> Mise en oeuvre du module de gestion de l’audience</a> </td> 
    <td colname="col2"> <p>La variable de données contextuelles se terminait incorrectement par un point au lieu d’un trait de soulignement. </p> 
     <ul id="ul_BBE47E5DF5714162A0D21BFEE1984F0B"> 
      <li id="li_B423DE3183144420B14F58A3FA75C6A6">Correct :<code> c_contextData.*</code> </li> 
@@ -144,20 +143,20 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
     </ul> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p>Activation de la fusion de profils client </p> </td> 
-   <td colname="col2"> <p> <span class="keyword"> Les clients </span> Analytics doivent définir un code d’intégration lors de l’utilisation du Profil marketing de Principal et de la transmission d’identifiants déclarés via le service d’identification des Visiteurs à  <span class="keyword"> l’Audience Manager</span>. </p> <p>Ce document est obsolète et a été remplacé par <a href="../features/profile-merge-rules/merge-rules-start.md"> Créer une source de données sur plusieurs périphériques</a>. </p> </td> 
+   <td colname="col1"> <p>Activation du profil de fusion des clients </p> </td> 
+   <td colname="col2"> <p> <span class="keyword"> </span> Les clients Analytics doivent définir un code d’intégration lors de l’utilisation du profil marketing de Principal et de la transmission des identifiants déclarés via le service d’identification des visiteurs à  <span class="keyword"> Audience Manager</span>. </p> <p>Ce document est obsolète et a été remplacé par <a href="../features/profile-merge-rules/merge-rules-start.md"> Créer une source de données multi-appareils</a>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-reporting.md"> FAQ sur la création de rapports </a> </p> </td> 
-   <td colname="col2"> <p>Une nouvelle entrée de FAQ explique pourquoi, parfois, les caractéristiques nouvellement intégrées ne s’affichent pas dans le <span class="wintitle"> graphique de caractéristiques</span>. </p> </td> 
+   <td colname="col2"> <p>Une nouvelle section FAQ explique pourquoi, parfois, les caractéristiques nouvellement intégrées ne s’affichent pas dans le <span class="wintitle"> graphique des caractéristiques</span>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../features/segments/segment-builder-data.md"> Données de taille de segment et de caractéristiques dans le créateur de segments  </a>. </p> </td> 
+   <td colname="col1"> <p> <a href="../features/segments/segment-builder-data.md"> Données sur la taille des caractéristiques et des segments dans le créateur de segments  </a>. </p> </td> 
    <td colname="col2"> <p>Révision de la description de la taille estimée du segment. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/system-components/components-overview.md">Composants système </a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour du texte et des nouvelles images qui expliquent comment fonctionnent les différents systèmes <span class="keyword"> d'Audience Manager</span> et comment les données circulent dans notre système. </p> </td> 
+   <td colname="col2"> <p>Mise à jour du texte et des nouvelles images qui expliquent le fonctionnement de divers systèmes d’Audience Manager <span class="keyword"> </span> et le flux de données dans notre système. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -173,12 +172,12 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p>Liens de documentation et références croisées. </p> </td> 
-   <td colname="col2"> <p>Mise à jour des liens obsolètes. Le fait de cliquer sur une référence croisée doit vous amener au bon document plutôt qu’à une notification de redirection. </p> </td> 
+   <td colname="col1"> <p>Liens vers la documentation et références croisées. </p> </td> 
+   <td colname="col2"> <p>Mise à jour des liens obsolètes. Cliquez sur une référence croisée pour accéder au document approprié au lieu d’une notification de redirection. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../reporting/audience-optimization-reports/aor-advertisers/import-dcm.md"> Importation de fichiers de données DCM dans Audience Manager</a> </td> 
-   <td colname="col2">Apportez vos <span class="keyword"> données DoubleClick Campaign Manager</span> à <span class="keyword"> Audience Manager</span>. </td> 
+   <td colname="col2">Importez vos données<span class="keyword"> DoubleClick Campaign Manager</span> dans <span class="keyword"> Audience Manager</span>. </td> 
   </tr> 
   <tr> 
    <td colname="col1"><a href="../api/dcs-intro/dcs-event-calls/dcs-event-calls.md">Méthodes et code de l’API du serveur de collecte de données (DCS) </a> </td> 
@@ -198,11 +197,11 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1">Méthode de DIL <a href="../dil/dil-class-overview/dil-create.md#dil-create"> create</a>. </td> 
+   <td colname="col1">La méthode de DIL <a href="../dil/dil-class-overview/dil-create.md#dil-create"> create</a> . </td> 
    <td colname="col2"> <p> 
      <ul id="ul_D4F6BB8E192E4C1BAF1B505541A1E56E"> 
       <li id="li_9C29F2E224444AC5B77B69C3BC9B26A8">Suppression du paramètre facultatif, <code> iframeAttachmentDelay</code>. </li> 
-      <li id="li_85A63519222A4423B8D7A3FF90929741">Ajouté une note à la variable <code> declaredId</code>. Lors de l’utilisation du service d’identification des Visiteurs, définissez l’identifiant avec <code> setCustomerIDs</code> au lieu du DIL. Voir <a href="https://docs.adobe.com/content/help/en/id-service/using/reference/authenticated-state.html" format="https" scope="external"> ID de client et états authentifiés</a>. </li> 
+      <li id="li_85A63519222A4423B8D7A3FF90929741">Ajout d’une note à la variable <code> declaredId</code> . Lors de l’utilisation du service d’identification des visiteurs, définissez l’identifiant avec <code> setCustomerIDs</code> au lieu de DIL. Voir <a href="https://docs.adobe.com/content/help/en/id-service/using/reference/authenticated-state.html" format="https" scope="external"> ID de client et états authentifiés</a>. </li> 
      </ul> </p> </td> 
   </tr> 
  </tbody> 
@@ -220,18 +219,18 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <a href="../features/audience-marketplace/audience-marketplace.md"> Audience Marketplace</a> </td> 
-   <td colname="col2"> L’Audience Marketplace permet aux fournisseurs de données et aux acheteurs d’exécuter les transactions de données en libre-service avec un effort minimum. Pour ce faire, il fournit des fonctionnalités spécialisées qui varient selon votre rôle en tant qu’acheteur ou vendeur de données. </td> 
+   <td colname="col2"> L’Audience Marketplace permet aux fournisseurs de données et aux acheteurs d’exécuter des transactions sur les données en libre-service avec un effort minimal. Pour ce faire, il fournit des fonctionnalités spécialisées qui varient en fonction de votre rôle en tant qu’acheteur ou vendeur de données. </td> 
   </tr> 
   <tr> 
-   <td colname="col1">Versions : 
+   <td colname="col1">Révisions : 
     <ul id="ul_CA72F516D8704B099522158F2440BE6A"> 
      <li id="li_187015C6742C4D2E84380C68FEF7B58E"><a href="../features/administration/administration-overview.md#create-group"> Création de groupes</a> </li> 
-     <li id="li_65B558E93BA84FA6AE3927C8BD4588FC"><a href="../features/administration/administration-overview.md"> Présentation des autorisations de carte génériques</a> </li> 
+     <li id="li_65B558E93BA84FA6AE3927C8BD4588FC"><a href="../features/administration/administration-overview.md"> Présentation des autorisations génériques</a> </li> 
     </ul> </td> 
    <td colname="col2"> 
     <ul id="ul_A93124CA56754F288CC5DFA0BCD84C84"> 
-     <li id="li_17C11CB53B2548D981E6B54D840781EF">Procédure et instructions simplifiées pour la création d’un groupe et l’attribution d’autorisations. </li> 
-     <li id="li_6825D0A07AE44DF1BE569C088F216A71">Informations Ajoutées sur les autorisations génériques et comment les utiliser. </li> 
+     <li id="li_17C11CB53B2548D981E6B54D840781EF">Étapes et instructions simplifiées pour la création d’un groupe et l’attribution d’autorisations. </li> 
+     <li id="li_6825D0A07AE44DF1BE569C088F216A71">Ajout d’informations sur les autorisations génériques et sur la manière de les utiliser. </li> 
     </ul> </td> 
   </tr> 
  </tbody> 
@@ -248,16 +247,16 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-file-contents.md"> Contenu du fichier de données entrantes : Syntaxe, variables et exemples  </a> </p> </td> 
-   <td colname="col2"> <p>Ajout de la remarque suivante : </p> <p> <p>Remarque :  <span class="keyword"> Audience Manager</span> ne prend pas en charge les fichiers .zip pour les compartiments S3 entrants. </p> </p> </td> 
+   <td colname="col1"> <p> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-file-contents.md"> Contenu du fichier de données entrant : Syntaxe, variables et exemples  </a> </p> </td> 
+   <td colname="col2"> <p>Ajout de la remarque suivante : </p> <p> <p>Remarque :  <span class="keyword"> l’Audience Manager</span> ne prend pas en charge les fichiers .zip pour les compartiments S3 entrants. </p> </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-reporting.md"> FAQ sur la création de rapports </a> </p> </td> 
-   <td colname="col2"> <p>Ajouté d’une nouvelle FAQ qui explique pourquoi le nombre total d’incendies pour les caractéristiques intégrées s’affiche toujours sous la forme 0. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une nouvelle FAQ qui explique pourquoi le nombre total de feux pour les caractéristiques intégrées s’affiche toujours sous la forme 0. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/traits/trait-geotarget-keys.md"> Géociblage à l’aide de clés au niveau des plateformes </a> </p> </td> 
-   <td colname="col2"> <p>Informations Ajoutées sur le ciblage au Royaume-Uni et aux Antilles néerlandaises. </p> </td> 
+   <td colname="col2"> <p>Ajout d’informations sur le ciblage au Royaume-Uni et aux Antilles néerlandaises. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -274,15 +273,15 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-reporting.md"> FAQ sur la création de rapports </a> </p> </td> 
-   <td colname="col2"> <p>Ajouté une nouvelle FAQ qui explique pourquoi le nombre d'enregistrements traités avec succès peut différer lors de la comparaison du reçu et du rapports de trafic entrant en AAM. </p> <p>Ajouté une nouvelle FAQ qui explique pourquoi les caractéristiques uniques de mes caractéristiques embarquées sur plusieurs périphériques sont supérieures au nombre total d'enregistrements embarqués. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une nouvelle FAQ qui explique pourquoi le nombre d’enregistrements traités avec succès peut différer lors de la comparaison des tickets d’entrée et des rapports dans AAM. </p> <p>Ajout d’une nouvelle FAQ qui explique pourquoi le nombre de caractéristiques uniques de mes caractéristiques intégrées multi-appareils est supérieur au nombre total d’enregistrements intégrés. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reference/system-components/components-overview.md">Composants système </a> </p> </td> 
-   <td colname="col2"> <p>Suppression des informations sur Talend. </p> <p>Suppression des informations sur Netezza et remplacement de celles sur RedShift. </p> </td> 
+   <td colname="col2"> <p>Suppression des informations sur Talend. </p> <p>Suppression des informations sur la Netezza et remplacement de cette dernière par des informations sur RedShift. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> Rétention des données </p> </td> 
-   <td colname="col2"> <p>Nouvelle rubrique. </p> <p>Modifié en <a href="../faq/faq-privacy.md"> FAQ sur la confidentialité et la rétention des données</a> (12/2016). </p> </td> 
+   <td colname="col2"> <p>Nouvelle rubrique. </p> <p>Modification en <a href="../faq/faq-privacy.md"> FAQ sur la confidentialité et la conservation des données</a> (12/2016). </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -298,20 +297,20 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  </thead>
  <tbody> 
   <tr> 
-   <td colname="col1"> <p> <a href="../reference/reporting-file-transfer-timeframe.md"> Lignes directrices sur la période de rapports et de transfert de fichiers  </a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour des heures d’importation quotidienne des fichiers entrants et d’exportation des fichiers sortants. </p> </td> 
+   <td colname="col1"> <p> <a href="../reference/reporting-file-transfer-timeframe.md"> Instructions sur la période de création de rapports et de transfert de fichiers  </a> </p> </td> 
+   <td colname="col2"> <p>Mise à jour des heures d’ingestion quotidienne et d’exportation de fichiers sortants. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/reports-dashboard.md"> Tableau de bord </a> </p> </td> 
-   <td colname="col2"> <p>Informations Ajoutées expliquant comment le changement delta est calculé en fonction de la période sélectionnée. </p> <p>Ajouté une note expliquant comment étudier un changement delta inhabituellement important dans les visiteurs uniques. </p> </td> 
+   <td colname="col2"> <p>Ajout d’informations expliquant comment le changement différentiel est calculé en fonction de la période choisie. </p> <p>Ajout d’une note expliquant comment étudier un changement exceptionnellement important de delta dans les visiteurs uniques. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/segments/recency-and-frequency.md"> Récence et fréquence </a> </p> </td> 
-   <td colname="col2"> <p>Ajouté les informations suivantes à la section Limitations et règles : </p> <p> 
+   <td colname="col2"> <p>Ajout des informations suivantes à la section Limites et règles : </p> <p> 
      <ul id="ul_2451A3EAA05E4961AA7EA90026F353F5"> 
-      <li id="li_0B524C6767274E1BAADEE0833DA00C84"> <p>Les expressions de plafonnement des fréquences incluent tous les utilisateurs dont le nombre de réalisations de caractéristiques est inférieur à une valeur souhaitée. </p> <p>Par exemple : </p> <p> <code> frequency([1000T]) &lt;= 5</code> </p> <p>Cette expression inclut tous les utilisateurs qui ont réalisé la caractéristique avec l’ID "1 000" moins de cinq fois, y compris ceux qui n’ont pas réalisé la caractéristique. </p> </li> 
-      <li id="li_F957554820B6454FA9756267C4D09AAD"> <p>Lorsque vous avez besoin de récence/fréquence inférieure à un nombre spécifique de fois ou de jours, vous devez joindre cette caractéristique à une autre avec un opérateur ET. </p> <p>À l’aide de l’exemple ci-dessus, <code> frequency([1000T]) &lt;= 5</code>, l’expression devient valide lorsqu’elle est associée à une autre caractéristique. </p> <p>Par exemple : </p> <p> <code> frequency([1000T]) &lt;= 5 AND isSiteVisitorTrait</code> </p> </li> 
-      <li id="li_BAEC874C0B6E4232A83C7228E84A7AD0"> <p>Pour les cas d’utilisation du plafonnement de la fréquence des publicités, vous pouvez créer une règle de segmentation semblable à celle-ci : </p> <p> <code> (frequency([1000T] &lt;= 2D) &gt;= 5)?</code> </p> <p>Cette expression inclut tous les utilisateurs qui ont réalisé plus de cinq fois la caractéristique avec l’ID "1000" au cours des deux derniers jours. </p> <p>Vous pouvez atteindre le plafond en envoyant ce segment au serveur d’annonces, puis en incluant un SAUF sur le segment dans le serveur d’annonces. Cette approche permet d'obtenir de meilleures performances en Audience Manager, tout en poursuivant le même objectif pour le plafonnement des fréquences. </p> </li> 
+      <li id="li_0B524C6767274E1BAADEE0833DA00C84"> <p>Les expressions de limitation de fréquence incluent tous les utilisateurs dont le nombre de réalisations de caractéristiques est inférieur à la valeur souhaitée. </p> <p>Par exemple : </p> <p> <code> frequency([1000T]) &lt;= 5</code> </p> <p>Cette expression inclut tous les utilisateurs qui ont réalisé la caractéristique avec l’ID "1 000" moins de cinq fois, y compris les utilisateurs qui n’ont pas réalisé la caractéristique. </p> </li> 
+      <li id="li_F957554820B6454FA9756267C4D09AAD"> <p>Lorsque vous avez besoin que les exigences de récence/fréquence soient inférieures à un nombre spécifique de fois ou de jours, vous devez joindre cette caractéristique à une autre avec un opérateur AND. </p> <p>En reprenant l’exemple ci-dessus, <code> frequency([1000T]) &lt;= 5</code>, l’expression devient valide lorsqu’elle est associée à une autre caractéristique. </p> <p>Par exemple : </p> <p> <code> frequency([1000T]) &lt;= 5 AND isSiteVisitorTrait</code> </p> </li> 
+      <li id="li_BAEC874C0B6E4232A83C7228E84A7AD0"> <p>Pour les cas d’utilisation de la limitation de la fréquence des publicités, vous pouvez créer une règle de segment similaire à ce qui suit : </p> <p> <code> (frequency([1000T] &lt;= 2D) &gt;= 5)?</code> </p> <p>Cette expression inclut tous les utilisateurs qui ont réalisé plus de cinq fois la caractéristique avec l’ID "1 000" au cours des deux derniers jours. </p> <p>Vous pouvez atteindre le plafond en envoyant ce segment au serveur d’annonces, puis en incluant un SAUF sur le segment du serveur d’annonces. Cette approche permet d’obtenir de meilleures performances en Audience Manager, tout en poursuivant le même objectif pour la limitation de la fréquence. </p> </li> 
      </ul> </p> </td> 
   </tr> 
  </tbody> 
@@ -329,15 +328,15 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../api/rest-api-main/aam-api-folders.md"> Méthodes d’API de dossier</a> </p> </td> 
-   <td colname="col2"> <p>Modification de l’exemple de code pour inclure la propriété de nombre de dossiers. </p> </td> 
+   <td colname="col2"> <p>Modification de l’exemple de code pour inclure la propriété folder count . </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/visitor-profile-viewer.md"> Visionneuse de profil du visiteur </a> </p> </td> 
    <td colname="col2"> <p>Nouvelle rubrique. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../faq/faq-inbound-data-ingestion.md"> Ingestion des données CRM entrantes  </a> </p> </td> 
-   <td colname="col2"> <p>Clarification de la durée nécessaire à la propagation des données entrantes vers le bord. </p> <p>Rubrique considérablement modifiée. </p> </td> 
+   <td colname="col1"> <p> <a href="../faq/faq-inbound-data-ingestion.md"> Ingestion de données CRM entrante  </a> </p> </td> 
+   <td colname="col2"> <p>Clarification du temps nécessaire à la propagation des données entrantes vers la périphérie. </p> <p>Rubrique modifiée de manière significative. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/reports-dashboard.md"> Tableau de bord </a> </p> </td> 
@@ -345,40 +344,39 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../reporting/general-reports.md#general-reports-overview"> Rapports généraux </a> </p> </td> 
-   <td colname="col2"> <p>Section Ajoutée expliquant comment des nombres dans <span class="wintitle"> Rapports généraux</span> sont générés. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une section expliquant comment les nombres dans <span class="wintitle"> Rapports généraux</span> sont générés. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../dil/dil-modules.md#sitecat-init"> siteCatalyst.init  </a> </p> </td> 
-   <td colname="col2"> <p>Ajouté une option qui exclut les informations d’identification personnelle. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une option qui exclut les informations d’identification personnelle (PII). </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../faq/faq-reporting.md"> FAQ sur la création de rapports </a> </p> </td> 
-   <td colname="col2"> <p>Informations Ajoutées expliquant pourquoi il pourrait y avoir une différence entre la population de segments en temps réel et les valeurs uniques. </p> </td> 
+   <td colname="col2"> <p>Ajout d’informations expliquant pourquoi il peut y avoir une différence entre la population de segments en temps réel et les valeurs uniques. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p>Activation de la fusion de profils client </p> </td> 
-   <td colname="col2"> <p>Ajout d’une étape supplémentaire Ajoutée pour expliquer comment ajouter l’utilisation des ID déclarés au DIL et au kit Mobile SDK. </p> <p>Ce document a été abandonné et remplacé par <a href="../features/profile-merge-rules/merge-rules-start.md"> Créer une source de données sur plusieurs périphériques</a>. </p> </td> 
+   <td colname="col1"> <p>Activation du profil de fusion des clients </p> </td> 
+   <td colname="col2"> <p>Ajout d’une étape supplémentaire pour expliquer comment ajouter l’utilisation des identifiants déclarés à DIL et au SDK Mobile. </p> <p>Ce document a été abandonné et remplacé par <a href="../features/profile-merge-rules/merge-rules-start.md"> Créer une source de données multi-appareils</a>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-file-contents.md"> Contenu du fichier de données entrantes : Syntaxe, variables et exemples  </a> </p> </td> 
+   <td colname="col1"> <p> <a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-file-contents.md"> Contenu du fichier de données entrant : Syntaxe, variables et exemples  </a> </p> </td> 
    <td colname="col2"> <p>Rubrique amendée. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p> Architecture de fusion de profils </p> </td> 
-   <td colname="col2"> <p>Mise à jour du texte et ajout d’illustrations. </p> <p>Ce document a été abandonné et remplacé par <a href="../features/profile-merge-rules/merge-rules-overview.md"> Profil Link</a>. </p> </td> 
+   <td colname="col1"> <p> Architecture de fusion des profils </p> </td> 
+   <td colname="col2"> <p>Mise à jour du texte et ajout d’illustrations. </p> <p>Ce document a été abandonné et remplacé par <a href="../features/profile-merge-rules/merge-rules-overview.md"> Lien de profil</a>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/segments/recency-and-frequency.md"> Récence et fréquence </a> </p> </td> 
-   <td colname="col2"> <p>Puce Ajoutée expliquant que vous pouvez configurer les exigences de fréquence sans configurer les exigences de récence en laissant vide la récence. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une puce expliquant que vous pouvez configurer les exigences de fréquence sans configurer les exigences de récence en laissant la récence vide. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/receiving-audience-data/batch-outbound-transfers/outbound-file-name-contents.md#outbound-contents-syntax"> Contenu du fichier de données sortantes : Syntaxe et paramètres  </a> </p> </td> 
-   <td colname="col2"> <p>Informations Ajoutées sur les segments supprimés dans les fichiers sortants. </p> </td> 
+   <td colname="col2"> <p>Ajout d’informations à propos des segments supprimés dans les fichiers sortants. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../integration/receiving-audience-data/batch-outbound-transfers/outbound-template-macros.md">Macros de création de modèles sortants</a> (en anglais) </p> </td> 
-   <td colname="col2"> <p>Nouvelle rubrique Ajoutée. </p> </td> 
+   <td colname="col2"> <p>Ajout d’une nouvelle rubrique. </p> </td> 
   </tr> 
  </tbody> 
 </table>
-
